fixed spacing for times in space

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ img {
 #astros {
     display: flex;
     flex-direction: column;
-    width: 700px;
+    width: 800px;
 }
 
 /* OLEG KONONENKO*/
